--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
     },
     "autoload-dev": {
         "psr-4": {
+            "Mst\\DoctrineWorkbenchBundle\\": "",
             "Tests\\": "tests/"
         }
     },
